--- a/mfi-big-project/src/main/java/mfi/tech/html+js+css/html+js/doRemind/RemindMe.html
+++ b/mfi-big-project/src/main/java/mfi/tech/html+js+css/html+js/doRemind/RemindMe.html
@@ -1,14 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-  		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-  		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		
-		<!-- script src="http://code.jquery.com/jquery-1.11.1.js"></script-->
-		
+<html>
+<head>
 <script>
 
 function executeProcess(){
@@ -37,25 +29,7 @@ function myFunction() {
 }
 </script>
 </head>
-
 <body>
-	<div class="container">
-		<button type="button" class="btn btn-primary btn-lg">Start the REMINDER</button>
-		<br>
-		<a href="#demo" data-toggle="collapse">How it works</a>
-		<div id="demo" class="collapse">
-			1- Write the message you want to be reminded, example : check my email<br>
-			2- Specify after how many minutes you want to be reminded, example 5 minutes<br>
-			3- Click the button <b>Start the REMINDER</b><br>
-			4- <u>Continue your work in anything you are doing</u>, when it is time, you will be reminded<br> 
-			<i>tips: do not close this page to keep the reminder working</i></p>
-		</div>
-		
-		<input type="text" class="form-control" id="usr" placeholder="Enter email">
-		<input type="text" id="myTextId" class="form-control" size=40 onclick="this.value=''" placeholder="anything ex:Check my email"></input>
-    	 <p class="form-control-static">minutes</p>
-	</div>
-
 <form id="myForm" action="mailto:miled.fikani@gmail.com" method="post" enctype="text/plain">
 <br>
 <p align="center">
